--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,6 +4,7 @@ footer {
     width: 100%;
     border-top: 1px solid #CCCCCC;
     text-align: center;
+    align-items: center;
     bottom: 0;
     position: fixed;
     justify-content: center;
